@@ -228,9 +228,12 @@ public final class WebApplicationImpl implements WebApplication {
         public <T> T getInstance(Scope scope, Class<T> c) 
                 throws InstantiationException, IllegalAccessException {
             T o = cp.getInstance(scope,c);
-            if (o == null)
+            if (o == null) {
                 o = c.newInstance();
-            injectResources(o);
+                injectResources(o);
+            } else {
+                injectResources(cp.getInjectableInstance(o));
+            }
             return o;
         }
 
@@ -238,15 +241,22 @@ public final class WebApplicationImpl implements WebApplication {
                 throws InstantiationException, IllegalArgumentException, 
                 IllegalAccessException, InvocationTargetException {
             T o = cp.getInstance(scope, contructor, parameters);
-            if (o == null)
+            if (o == null) {
                 o = contructor.newInstance(parameters);
-            injectResources(o);
+                injectResources(o);
+            } else {
+                injectResources(cp.getInjectableInstance(o));
+            }
             return o;
         }
 
+        public <T> T getInjectableInstance(T instance) {
+            return cp.getInjectableInstance(instance);
+        }
+        
         public void inject(Object instance) {
             cp.inject(instance);
-            injectResources(instance);
+            injectResources(cp.getInjectableInstance(instance));
         }
     }
     
@@ -266,6 +276,10 @@ public final class WebApplicationImpl implements WebApplication {
             return o;
         }
 
+        public <T> T getInjectableInstance(T instance) {
+            return instance;
+        }
+        
         public void inject(Object instance) {
             injectResources(instance);
         }
